--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,21 @@
   "version": "1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.8",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.6",
+    "socket.io": "^4.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
